syntax = "proto3";

package chat;

service ChatService {
  rpc AccessChat (AccessChatRequest) returns (ChatResponse);
  rpc FetchChats (FetchChatsRequest) returns (FetchChatsResponse);
  rpc CreateGroupChat (CreateGroupRequest) returns (ChatResponse);
  rpc RenameGroup (RenameGroupRequest) returns (ChatResponse);
  rpc AddToGroup (GroupUserRequest) returns (ChatResponse);
  rpc RemoveFromGroup (GroupUserRequest) returns (ChatResponse);
  rpc SendMessage (SendMessageRequest) returns (MessageResponse);
  rpc FetchMessages (FetchMessagesRequest) returns (FetchMessagesResponse);
}

/* ---------- Messages ---------- */

message AccessChatRequest {
  string targetUserId = 1;
}

message FetchChatsRequest {}

message FetchChatsResponse {
  repeated ChatResponse chats = 1;
}

message CreateGroupRequest {
  string name = 1;
  repeated string users = 2;
}

message RenameGroupRequest {
  string chatId = 1;
  string chatName = 2;
}

message GroupUserRequest {
  string chatId = 1;
  string userId = 2;
}

message UserInfo {
  string _id = 1;
  string name = 2;
  string email = 3;
  string pic = 4;
}

message ChatResponse {
  string chatId = 1;
  string chatName = 2;
  bool isGroupChat = 3;
  repeated UserInfo users = 4;
  string message = 5;
  int32 unreadCount = 6;
}




message SendMessageRequest {
  string chatId = 1;
  string content = 2;
}

message MessageResponse {
  string messageId = 1;
  string chatId = 2;
  string senderId = 3;
  string content = 4;
  string createdAt = 5;
}

message FetchMessagesRequest {
  string chatId = 1;
}

message FetchMessagesResponse {
  repeated MessageResponse messages = 1;
}

message MessageItem {
  string messageId = 1;
  string chatId = 2; 
  string senderId = 3;
  string content = 4;
  string createdAt = 5;
}
